<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_modulos"
            android:icon="@drawable/ic_menu_p"
            android:title="@string/menu_modulos" />
        <item
            android:id="@+id/nav_emergencias"
            android:icon="@drawable/ic_local_phone_black_24dp"
            android:title="@string/menu_emergencias" />
        <item
            android:id="@+id/nav_taxis"
            android:icon="@drawable/ic_menu_taxi"
            android:title="@string/menu_taxis" />
    </group>

</menu>
