<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/incidente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sizeTitle18"
        android:paddingBottom="@dimen/margin_eight"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <Switch
        android:id="@+id/switch_modal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/alarma_real"
        android:textOff="@string/alarma_falso"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:showText="true"
        android:track="@drawable/switch_track_selector"
        android:thumb="@drawable/switch_thumb_selector"
        android:text="@string/alarma"/>
    <EditText
        android:id="@+id/modal_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/error"
        android:text="@string/error_info"
        android:textColor="@color/colorRed200"
        android:layout_width="match_parent"
        android:padding="@dimen/margin_five"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_modal_cancel"
            android:text="@string/button_cancelar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            style="?attr/selectableItemBackgroundBorderless"/>
        <Button
            android:id="@+id/button_modal_register"
            android:text="@string/button_registrar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlue"
            android:textColor="@android:color/white"
            style="?attr/selectableItemBackgroundBorderless"
            />
    </LinearLayout>
</LinearLayout>