<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/margin_five"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="@dimen/margin_five"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:text="@string/action_settings"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_title"
            android:padding="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/placeholder_image"
            android:layout_marginBottom="@dimen/margin_two"/>
        <TextView
            android:id="@+id/title_neighborhood"
            android:text="@string/neighborhood"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="@dimen/margin_five"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            />
        <TextView
            android:id="@+id/text_neighborhood"
            android:padding="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/title_direction"
            android:text="@string/direction"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="@dimen/margin_five"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            />
        <TextView
            android:id="@+id/text_direction"
            android:padding="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_phone"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_local_phone_black_24dp"
                style="?attr/selectableItemBackgroundBorderless"/>
            <Button
                android:id="@+id/button_whatsapp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_whatsapp"
                android:backgroundTint="@color/colorGreenWhatsapp"
                android:textColor="@android:color/white"
                style="?attr/selectableItemBackgroundBorderless"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

