<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/margin_five"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="@dimen/margin_five"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sizeTitle18"
            android:padding="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:background="@color/colorGrey300"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:padding="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/direction_inc"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/text_direction"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="hola" />
                    <ImageButton
                        android:id="@+id/button_map"
                        android:background="@drawable/ic_map"
                        android:foreground="?android:selectableItemBackground"
                        android:layout_width="@dimen/sizeButton"
                        android:layout_height="@dimen/sizeButtonHeight"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/date_inc"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:text="20/10/2020"
                        android:id="@+id/text_datetime"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        />
                    <ImageButton
                       android:id="@+id/button_modal"
                        android:background="@drawable/ic_pencil"
                        android:layout_width="@dimen/sizeButton"
                        android:foreground="?android:selectableItemBackground"
                        android:layout_height="@dimen/sizeButton"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_cancel"
            app:cardBackgroundColor="@color/colorRed100"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/margin_eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cancelado_inc"
                    android:textAlignment="center"
                    android:textStyle="bold|italic"
                    android:textSize="@dimen/fab_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/text_datetime_cancel"
                    android:text="20/10/2020"
                    android:textAlignment="textEnd"
                    android:textStyle="italic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end" />
                <RelativeLayout
                    android:paddingTop="@dimen/margin_five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/motivo_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold|italic"
                        android:text="@string/motive_inc_can"
                        android:paddingRight="@dimen/margin_five"/>
                    <TextView
                        android:id="@+id/text_motive_can"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_toEndOf="@+id/motivo_text"
                        android:layout_toRightOf="@+id/motivo_text"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/detail_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold|italic"
                        android:text="@string/detail_inc_can"
                        android:paddingRight="@dimen/margin_five"/>
                    <TextView
                        android:id="@+id/text_detail_can"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_toEndOf="@+id/detail_text"
                        android:layout_toRightOf="@+id/detail_text"/>
                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_active"
            app:cardBackgroundColor="@color/colorBlue100"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/margin_eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/activo_inc"
                    android:textAlignment="center"
                    android:textStyle="bold|italic"
                    android:textSize="@dimen/fab_margin"
                    android:padding="@dimen/margin_eight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_phone"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_local_phone_black_24dp"
                style="?attr/selectableItemBackgroundBorderless"/>
            <Button
                android:id="@+id/button_whatsapp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_whatsapp"
                android:backgroundTint="@color/colorGreenWhatsapp"
                android:textColor="@android:color/white"
                style="?attr/selectableItemBackgroundBorderless"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

